--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "author": "Vladislav 'Ithelor' Dietrich",
   "license": "ISC",
   "dependencies": {
-    "config": "^3.3.6",
+    "@google-cloud/translate": "^6.3.1",
+    "dotenv": "^10.0.0",
     "node-telegram-bot-api": "^0.54.0",
     "npmlog": "^5.0.1"
   },
