Basic db handling, massive dev-side fixes, improvements and downgrades // =18h

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,10 @@
         "rootDir": ".",
         "outDir": "./build",
         "esModuleInterop": true,
-        "strict": true
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "allowJs": true
     },
-    "files": ["server.ts", "util/Logger.ts", "util/Translator.ts"],
+    "files": ["server.ts", "util/Translator.ts"],
     "exclude": ["node_modules"]
 }
