--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Telegram translator bot",
   "main": "server.js",
   "scripts": {
+    "start": "ts-node server.ts",
     "dev": "nodemon server.ts"
   },
   "keywords": [
@@ -20,15 +21,23 @@
   "dependencies": {
     "@google-cloud/translate": "^6.3.1",
     "dotenv": "^10.0.0",
+    "mongoose": "^6.0.13",
     "node-telegram-bot-api": "^0.54.0",
     "npmlog": "^5.0.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^16.11.7",
+    "@types/node-telegram-bot-api": "^0.53.2",
+    "@types/npmlog": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "concurrently": "^6.4.0",
+    "eslint": "^8.2.0",
     "nodemon": "^2.0.14",
+    "prettier": "^2.4.1",
     "ts-node": "^10.4.0"
   }
 }
