Growing in functionality, the code is a mess, got to clean it up // =21.5h

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
         "sourceMap": true,
         "rootDir": ".",
         "outDir": "./build",
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
+        // "esModuleInterop": true,
+        // "allowSyntheticDefaultImports": true,
         "strict": true,
         "allowJs": true
     },
