--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
     "compilerOptions": {
         "target": "es6",
-        "module": "commonjs",
+        "module": "CommonJS",
+        "moduleResolution": "node",
         "removeComments": true,
         "sourceMap": true,
         "rootDir": ".",
         "outDir": "./build",
-        // "esModuleInterop": true,
-        // "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
         "strict": true,
         "allowJs": true
     },
